# tokio-timer

./: Cargo.toml  README.md
src/: timer.rs
tests/: test_timer.rs
tokio_timer/: enum.TimeoutError.html  enum.TimerError.html  struct.Builder.html  struct.Interval.html  struct.Sleep.html  struct.Timeout.html  struct.TimeoutStream.html  struct.Timer.html
