[package]
name = "tokio-timer-plus"
version = "0.1.3"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio-timer"
homepage = "https://github.com/tokio-rs/tokio-timer"
documentation = "https://docs.rs/tokio-timer"
description = """
Timer facilities for Tokio
"""

[lib]
name = "tokio_timer"

[dependencies]
futures = "0.1"
slab = "0.3.0"
