[package]
name = "tokio-timer-plus"
version = "0.1.3"
authors = ["Wei Tang <hi@that.world>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sorpaas/tokio-timer-plus"
homepage = "https://github.com/sorpaas/tokio-timer-plus"
documentation = "https://docs.rs/tokio-timer-plus"
description = """
Timer facilities for Tokio
"""

[lib]
name = "tokio_timer"

[dependencies]
futures = "0.1"
slab = "0.3.0"
